# newsai

./: README.md  pyproject.toml
backend/: server.py
backend/agents/: curator.py  scrapper.py  search.py  writer.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: articleContent.jsx  articleForm.jsx  footer.jsx  header.jsx
test/: script.py
